--- a/templates/Amis/Addfriends.html.twig
+++ b/templates/Amis/Addfriends.html.twig
@@ -5,29 +5,35 @@
 {% endblock %}
 
 {% block body %}
-    <body id="ajout">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
-{{ form_start(form) }}
+    <div id="ajout">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <div id="titre">
+            <span id="close">
+                <a href="/home/friends">
+                    <i class="fa-solid fa-xmark"></i>
+                </a>
+            </span> 
+            <h2>Rechercher un utilisateur</h2>
+        </div>
+        <div id="recherche">
+        {{ form_start(form) }}
         {{ form_row(form.name,{
             label : 'Nom'
         }) }}
-    <button id="cherch" type="submit" class="btn">Rechercher</button> 
-{{ form_end(form) }}
-</body>
+        <button id="cherch" type="submit" class="btn">Rechercher</button> 
+        {{ form_end(form) }}
+
+        {% if 'form=error' in url %}
+            <div class="alert alert-danger" role="alert">
+                Aucun utilisateur trouvé
+            </div>
+        {% endif %}
+        {% if 'form=ok' in url %}
+            <div class="alert alert-success" role="alert">
+                Demande d'ami envoyée 
+            </div>
+        {% endif %}
+        </div>
+    </div>
 {% endblock %}
-
-
-
-
-
-{% if 'form=error' in url %}
-    <div class="alert alert-danger" role="alert">
-        Aucun utilisateur trouvé
-    </div>
-{% endif %}
-{% if 'form=ok' in url %}
-    <div class="alert alert-success" role="alert">
-        Demande d'ami envoyée 
-    </div>
-{% endif %}
