--- a/templates/Amis/index.html.twig
+++ b/templates/Amis/index.html.twig
@@ -43,7 +43,7 @@
                     {% for friend in friends %}
                         <tr id="trBody">
                         <td>
-                            <img class="ppfriends" src="{{asset('profile_pictures/' ~  friend.getpp()  ~ '')}}" alt ="profile picture">
+                            <img class="ppfriends" src="{{asset('profile_pictures/' ~  friend.getpp2()  ~ '')}}" alt ="profile picture">
                         </td>
                         <td>
                             {{ friend.getusername() }}
