fix boutons deploy

--- a/public/style/objectifs.css
+++ b/public/style/objectifs.css
@@ -17,7 +17,7 @@
 }
 
 #HeaderObjectifs a, #Objectifs a{
-    font-size:x-large;
+    font-size:3vh;
     font-family: 'poppins';
     color : white;
     text-decoration-color: white;
