Changement css amis

--- a/templates/Amis/attente.html.twig
+++ b/templates/Amis/attente.html.twig
@@ -1,6 +1,6 @@
 <html lang="fr">
     {% block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('style/liste.css') }}">
+        <link rel="stylesheet" href="{{ asset('style/demande.css') }}">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     {% endblock %}
