--- a/public/style/objectifs.css
+++ b/public/style/objectifs.css
@@ -43,7 +43,7 @@
     justify-content: center;
     align-items: center;
     height : 6vh;
-    width : 13vw;
+    width : 14vw;
 }
 
 #btn-ajout:hover{
@@ -73,8 +73,22 @@
     border-radius: 1vh;
     color: white;
     text-decoration: none;
-    font-size: 1.5em;
 }
 
-
-
+@media(max-width: 600px) {
+    #BodyObjectifs{
+        width: 80%;
+        height : 50%;
+    }
+    #HeaderObjectifs{
+        flex-direction: column;
+    }
+    #HeaderObjectifs a, #Objectifs a{
+        font-size: 6vw;
+        margin-bottom: 2vw;
+    }
+    #btn-ajout{
+        width : 50vw;
+        font-size: 4vw;
+    }
+}
