--- a/public/style/task/form.css
+++ b/public/style/task/form.css
@@ -151,6 +151,7 @@ legend{
 }
 
 .btn{
+    display: flex;
     align-items: center;
     width : 40vw;
 }
@@ -177,4 +178,66 @@ button{
     justify-content: center;
     display: flex;
     flex-direction: row;
+}
+
+@media(max-width: 600px){
+    i{
+        font-size: 8vw;
+    }
+    form{
+        width : 80vw;
+    }
+    h1{
+        font-size: 10vw;
+    }
+    h3{
+        font-size: 6vw;
+    }
+    p{
+        font-size: 3.5vw;
+    }
+    label{
+        font-size: 3.5vw;
+    }
+    legend{
+        font-size: 3.5vw;
+    }
+    #task_perso_Enregistrer{
+        font-size: 3.5vw;
+    }
+    .form-control{
+        font-size: 3.5vw;
+    }
+    .input-group{
+        font-size: 3.5vw;
+    }
+    .form-select{
+        font-size: 3.5vw;
+    }
+    .form-control:focus{
+        font-size: 3.5vw;
+    }
+    .form-control::placeholder{
+        font-size: 3.5vw;
+    }
+    #task_perso_dateDebut, #task_perso_dueDate{
+        font-size: 3.5vw;
+    }
+    .taskPerso{
+        font-size: 3.5vw;
+    }
+    .btn{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width : 80vw;
+    }
+    #task_perso_Enregistrer{
+        font-size: 3.5vw;
+        margin: 0 auto;
+    }
+
+    #btnFrequence{
+        font-size: 3.5vw;
+    }
 }
